NEXT-1606 - Fix initial creation of categories in diffrent language

--- a/Resources/administration/src/app/component/tree/sw-tree-input-field/sw-tree-input-field.html.twig
+++ b/Resources/administration/src/app/component/tree/sw-tree-input-field/sw-tree-input-field.html.twig
@@ -1,12 +1,12 @@
 {% block sw_tree_input_field %}
-    <div class="sw-tree-item sw-tree-input-field is--no-children">
+    <div class="sw-tree-item sw-tree-input-field is--no-children" :class="classes">
 
         {% block sw_tree_input_fieldelement %}
             <div class="sw-tree-item__element">
 
                 {% block sw_tree_input_fieldelement_grip %}
                     <div class="sw-tree-item__icon">
-                        <sw-icon name="small-default-circle-small" size="18"></sw-icon>
+                        <sw-icon v-if="!disabled" name="small-default-circle-small" size="18"></sw-icon>
                     </div>
                 {% endblock %}
 
@@ -15,11 +15,13 @@
                         <slot name="content">
                             {% block sw_tree_input_fieldslot_content %}
                                 <sw-confirm-field :value="currentValue"
+                                                  :disabled="disabled"
                                                   @input="createNewItem"
                                                   :placeholder="$tc('sw-tree.general.buttonCreate')">
                                 </sw-confirm-field>
                             {% endblock %}
                         </slot>
+                        <span v-if="disabled" class="sw-tree-input-field__language-warning">{{ $tc('sw-tree.general.actions.actionsDisabledInLanguage') }}.</span>
                     </div>
                 {% endblock %}
             </div>
