--- a/Resources/administration/src/app/component/tree/sw-tree-input-field/sw-tree-input-field.scss
+++ b/Resources/administration/src/app/component/tree/sw-tree-input-field/sw-tree-input-field.scss
@@ -10,13 +10,29 @@ $sw-tree-item-color-text: $color-gutenberg;
             grid-template-columns: 20px auto;
             padding: 0 35px 0 73px;
         }
-    }
 
-    &.sw-tree-input-field {
-        .sw-tree-item__element {
-            grid-template-columns: 22px auto;
-            padding: 0 35px 0 67px;
+        &.is--disabled {
+            .sw-tree-item__element {
+                height: auto;
+                align-content: start;
+
+                &:hover {
+                    background: 0 none;
+
+                    .sw-tree-item__icon,
+                    .sw-tree-item__content {
+                        color: $sw-tree-item-color-text;
+                    }
+                }
+            }
+
+            .sw-confirm-field {
+                margin-bottom: 10px;
+            }
+
+            .sw-tree-input-field__language-warning {
+                white-space: normal;
+            }
         }
-
     }
 }
