--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -48,6 +48,7 @@
                 <sw-category-tree
                     :categories="categories"
                     :activeCategory="category"
+                    :disableContextMenu="disableContextMenu"
                     @sw-category-on-save="onSaveCategories"
                     @sw-category-on-refresh="onRefreshCategories"
                     @sw-category-on-reset-details="resetCategory"
