--- a/Resources/administration/src/module/sw-cms/blocks/image-text/preview/sw-cms-preview-image-text.scss
+++ b/Resources/administration/src/module/sw-cms/blocks/image-text/preview/sw-cms-preview-image-text.scss
@@ -1,5 +1,5 @@
 .sw-cms-preview-image-text {
-    .container {
+    .sw-cms-preview-image-text__content {
         display: grid;
         width: 100%;
         grid-template-columns: 2fr 3fr;
