--- a/Resources/administration/src/module/sw-cms/blocks/text/preview/sw-cms-preview-text.html.twig
+++ b/Resources/administration/src/module/sw-cms/blocks/text/preview/sw-cms-preview-text.html.twig
@@ -1,4 +1,6 @@
-<div class="sw-cms-preview-text">
-    <h2>Lorem ipsum dolor</h2>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-</div>
+{% block sw_cms_block_text_preview %}
+    <div class="sw-cms-preview-text">
+        <h2>Lorem ipsum dolor</h2>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+    </div>
+{% endblock %}
