--- a/Resources/administration/src/module/sw-cms/component/sw-cms-toolbar/sw-cms-toolbar.scss
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-toolbar/sw-cms-toolbar.scss
@@ -16,6 +16,9 @@
             transform: rotate(180deg);
         }
 
+        a:hover .sw-icon {
+            color: $color-kashmir;
+        }
     }
 
     .sw-cms-toolbar__title h2 {
