--- a/Resources/administration/src/module/sw-cms/elements/image/config/sw-cms-el-config-image.html.twig
+++ b/Resources/administration/src/module/sw-cms/elements/image/config/sw-cms-el-config-image.html.twig
@@ -1,10 +1,16 @@
-<div class="sw-cms-el-config-image">
-    <sw-media-upload variant="regular"
-                     :source="element.data.media"
-                     :allowMultiSelect="false"
-                     caption="Upload an image"
-                     @sw-media-upload-new-uploads-added="onChangeMedia"
-                     @sw-media-upload-media-upload-success="onImageUpload"
-                     @sw-media-upload-remove-image="onImageRemove">
-    </sw-media-upload>
-</div>
+{% block sw_cms_element_image_config %}
+    <div class="sw-cms-el-config-image">
+        <sw-media-upload variant="regular"
+                         :uploadTag="uploadTag"
+                         :source="element.data.media"
+                         :allowMultiSelect="false"
+                         :caption="$tc('sw-cms.elements.captionMediaUpload')"
+                         @sw-media-upload-remove-image="onImageRemove">
+        </sw-media-upload>
+        <sw-upload-store-listener
+                :uploadTag="uploadTag"
+                @sw-media-upload-added="onChangeMedia"
+                @sw-media-upload-finished="onImageUpload">
+        </sw-upload-store-listener>
+    </div>
+{% endblock %}
