--- a/Resources/administration/src/module/sw-cms/elements/product-box/component/sw-cms-el-product-box.html.twig
+++ b/Resources/administration/src/module/sw-cms/elements/product-box/component/sw-cms-el-product-box.html.twig
@@ -1,2 +1,3 @@
-<div class="sw-cms-el-product-box">
-</div>
+{% block sw_cms_element_product_box %}
+    <div class="sw-cms-el-product-box"></div>
+{% endblock %}
