--- a/Resources/administration/src/module/sw-cms/blocks/image/component/sw-cms-block-image.html.twig
+++ b/Resources/administration/src/module/sw-cms/blocks/image/component/sw-cms-block-image.html.twig
@@ -1,3 +1,5 @@
-<div class="sw-cms-block-image">
-    <slot name="image"></slot>
-</div>
+{% block sw_cms_block_image %}
+    <div class="sw-cms-block-image">
+        <slot name="image">{% block sw_cms_block_image_slot_image %}{% endblock %}</slot>
+    </div>
+{% endblock %}
