--- a/Resources/administration/src/module/sw-cms/blocks/text/component/sw-cms-block-text.html.twig
+++ b/Resources/administration/src/module/sw-cms/blocks/text/component/sw-cms-block-text.html.twig
@@ -1,3 +1,5 @@
-<div class="sw-cms-block-text">
-    <slot name="text-content"></slot>
-</div>
+{% block sw_cms_block_text %}
+    <div class="sw-cms-block-text">
+        <slot name="text-content">{% block sw_cms_block_text_slot_text_content %}{% endblock %}</slot>
+    </div>
+{% endblock %}
