--- a/Resources/administration/src/module/sw-cms/component/sw-cms-list-item/sw-cms-list-item.html.twig
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-list-item/sw-cms-list-item.html.twig
@@ -1,7 +1,14 @@
-<div class="sw-cms-list-item">
-    <div class="sw-cms-list-item__image" @click="$emit('onItemClick', page)"></div>
-    <div class="sw-cms-list-item__info">
-        <sw-icon class="sw-cms-list-item__status" name="small-default-circle-medium" small></sw-icon>
-        <div class="sw-cms-list-item__title" @click="$emit('onItemClick', page)">{{ page.meta.viewData.name }}</div>
+{% block sw_cms_list_item %}
+    <div class="sw-cms-list-item">
+        {% block sw_cms_list_item_image %}
+            <div class="sw-cms-list-item__image" @click="$emit('onItemClick', page)"></div>
+        {% endblock %}
+
+        {% block sw_cms_list_item_info %}
+            <div class="sw-cms-list-item__info">
+                <sw-icon class="sw-cms-list-item__status" name="small-default-circle-medium" small></sw-icon>
+                <div class="sw-cms-list-item__title" @click="$emit('onItemClick', page)">{{ page.meta.viewData.name }}</div>
+            </div>
+        {% endblock %}
     </div>
-</div>
+{% endblock %}
